--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<script type="text/javascript" src="pixi.min.js"></script>
 	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="howler.min.js"></script>
+	<script type="text/javascript" src="pixi.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript">console.log(PIXI);</script>
 </body>
